added contact media and about

--- a/about.html
+++ b/about.html
@@ -10,10 +10,59 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="contant.html">Contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </head>
   <body>
     <script src="javascript.js"></script>
+    <section class="about-section">
+      <img id="hiking" src="Assets/hiking-stranger.html" alt="" />
+
+      <p>
+        Hiking gives me the thrill of seeking and exploring new places that
+        excite me, you never know what you will find when exploring out in the
+        beautiful wilderness and seeing all the different plants and animals.
+        Also understanding how to respect nature while enjoying it's
+        peacefullness gives me a new appreciation for what I love about the
+        world around me. Something that also makes me love hiking is trying to
+        get to the trails because sometimes it can be very tricky getting to
+        where you need to go especially so far away from civilization. It is
+        always interesting though, the farther away you go from civilization the
+        more you feel connected to it, in some way feeling so small among the
+        forest and mountains makes you want to acomplish big things!
+      </p>
+
+      <img id="violin" src="Assets/man-playing-violin.html" alt="" />
+
+      <p>
+        Violin has been a part of my life even as a child, feelin the instrument
+        while I play instead of looking at what I am doing is the most
+        exhilarating part of playing any instrument. It has a special connection
+        with you and the world around you, playing with your heart instead of
+        always thinking with your mind gives me a break from the harsh reality
+        that can sometimes overwhelm anyone that dares try and face any trial in
+        front of them. When you are able to take away that extra noise around
+        you and create something that is special to you, that is what makes
+        playing my violin truly powerful because you become an unstopable
+        source, where nothing can hurt you in that small moment of simply
+        playing an instrument.
+      </p>
+
+      <img id="reading" src="Assets/library-books.cms" alt="" />
+
+      <p>
+        Reading is another one of the fuctions that allows you to not let
+        yourself get caught up in the noises of reality, everyone pulling one
+        way or another but instead you get to read someone elses story while
+        creating your own version at the same time. Being able to use art and
+        the incredible diversity of your own imagination is what makes life
+        truly amazing, my favorite is finding something that is a more simple
+        biography that lets me fill in the gaps and allows me to add my own
+        flare to the story. It always helps to take your mind off the unknown
+        for what we do not know we should never worry about, worry is something
+        that I do far too often and being able to sit back and imagine myself
+        inside a story that I can see my own heart a part of is truly exemplary!
+      </p>
+    </section>
   </body>
 </html>
