--- a/contact.html
+++ b/contact.html
@@ -3,17 +3,50 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>Contact Form</title>
+    <link rel="stylesheet" href="styles-contact.css" />
 
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="contant.html">Contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </head>
   <body>
     <script src="javascript.js"></script>
+    <div class="container">
+      <h2>Contact Us</h2>
+      <form action="submit.php" method="post">
+        <label for="name">Name</label>
+        <input
+          type="text"
+          id="name"
+          name="name"
+          placeholder="Your name.."
+          required
+        />
+
+        <label for="email">Email</label>
+        <input
+          type="text"
+          id="email"
+          name="email"
+          placeholder="Your email.."
+          required
+        />
+
+        <label for="message">Message</label>
+        <textarea
+          id="message"
+          name="message"
+          placeholder="Write something.."
+          style="height: 200px"
+          required
+        ></textarea>
+
+        <input type="submit" value="Submit" />
+      </form>
+    </div>
   </body>
 </html>
